package ub.edu.model;

public class EstadistiquesIndividuals {

    private int punts;

    public EstadistiquesIndividuals () {
        punts = 0;
    }

    public int getEstadistiques(){

        return punts;
    }

    public void setPunts(int punts) {
        this.punts = punts;
    }
}
