package ub.edu.model;

public class TripUB {
}
