
@startuml
skinparam classAttributeIconSize 0
title Diagrama de Model de Domini



TripUB "1" o--- "*" Persona: estanEnregistrades
TripUB "1"*--- "1..*" Ruta : proposa

Ruta "*" *-- "1" Localitat : parteix
Ruta "*" *-- "1" Localitat : finalitza


Ruta "1" *-- "1..*" Tram : composadaPer
Tram "*" -left- "1" Transport: <<recomana
Tram "*" -left- "1..*" Transport: <<possibleFerEn

Ruta "*" --"*" Ruta: estàPropDe

Transport <|-- Cotxe
Transport <|-- Bicicleta
Transport <|-- APeu

Tram <|-- TramEtapa
Tram <|-right- TramTrack

TramEtapa "*" -- "1" Etapa: comença
TramEtapa "*" -- "1" Etapa: acaba

Persona "1" -left- "1" EstadistiquesIndividuals: <<Té
EstadistiquesIndividuals "*" -left-* "1" RankingGrup: <<conformen
Grup "*" *-- "*" Persona: <<conformen
Grup "1" -down- "1" RankingGrup: <<Té

Localitat "1..*" --"1" Comarca: pertany

Localitat <|-- Etapa
Localitat <|-right-- PuntDePas

Etapa "1" -- "1..*" Allotjament: ofereix
Allotjament <|-- Camping
Allotjament <|-- Refugi
Allotjament <|-- CasaRural
Allotjament <|-- Hotel


TramTrack "*" -- "1" PuntDePas: comença
TramTrack "*" -- "1" PuntDePas: acaba

Persona "*" -- "1..*" Ruta : planifica
Persona "1" -- "1" Direccio : resideix

Ruta "1" -right- "1" Estat: es troba en
TramTrack"1" -right- "1" Estat: es troba en
Estat <|-down- NoComencat
Estat <|-down- EnProces
Estat <|-down- Acabat

LlistaRutes"1" *-right- "*" Ruta: <<Es conformada
LlistaRutesPreferides <|-right- LlistaRutes
LlistaRutesProgramades <|-right- LlistaRutes
LlistaRutesSeleccionadesGrup <|-right- LlistaRutes


class TripUB #aliceblue;line.bold;text:blue{
}

class Persona  {
 correu: String
 nom : String
 cognom: String
 data_neix: Date
 dni: String
}

class XarxaPersones {
 llistaPersones: Persones
}

class Direccio {
 carrer: String
 numero: int
 poblacio: String
 codi_postal: String
}

class Tram  {
ID: String
}


class Ruta  {
 id_Ruta: int
 dies: int
 nom: String
 descripció: String
 \cost: Quantitat
 \distancia: Quantitat
 dificultat: String
 tipusRuta: String
}

class TramEtapa   {
kms: float
\ tempsEstimat: Time
\cost: Quantitat
}


class TramTrack  {
duracióEstimada: Time
distància: int
desnivellPositiu: int
desnivellNegatiu: int
}



class Localitat   {
 idLloc: int
 nom: String
 altitud: float
 latitud: float
 longitud: float
}
class Comarca  {
 nom: String
 id_comarca: int
}

class PuntDePas {
 highlight: String
}

class Etapa  {
}

class Allotjament {
nom: string
preuPerNit: Quantitat
}

class Hotel {
preuEsmorzar: Quantitat
preuMP: Quantitat
preuPC: Quantitat
}

class CasaRural {
preuEsmorzar: Quantitat
preuMP: Quantitat
}

class Camping {
}

class Refugi {
preuMP: Quantitat
}


class Transport  {
velocitat: float
}

class Cotxe  {
model: string
tipusCombustible: booleà
}

class Bicicleta  {
model: string

}

class APeu   {
}

class RankingGrup  {
}

class EstadistiquesIndividuals {
Punts: Quantitat
}

class Estat {
}

class NoComencat {
}

class EnProces {
}

class Acabat {
}

class LlistaRutes {
}

class LlistaRutesProgramades {
}

class LlistaRutesSeleccionadesGrup {
}

class LlistaRutesPreferides {
}

class Grup {
}


@enduml
